[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/art/projectiles/4nickpick/hyper2.png" type="Texture" id=1]
[ext_resource path="res://assets/art/projectiles/4nickpick/hyper_base.png" type="Texture" id=2]
[ext_resource path="res://assets/art/projectiles/4nickpick/hyper_base2.png" type="Texture" id=3]
[ext_resource path="res://assets/art/projectiles/4nickpick/hyper.png" type="Texture" id=4]
[ext_resource path="res://scenes/projectiles/HyperBeam.gd" type="Script" id=5]
[ext_resource path="res://scenes/projectiles/Beam.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.35939, 54.5436 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.2844, 54.3459 )

[node name="HyperBeam" type="Area2D" groups=[
"player_projectiles",
]]
position = Vector2( -0.765427, 0 )
collision_layer = 4
collision_mask = 10
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.60364, 0.325256 )
shape = SubResource( 1 )

[node name="Beams" type="Node2D" parent="."]

[node name="Beam" type="Area2D" parent="Beams" groups=[
"player_projectiles",
]]
position = Vector2( -0.431717, 0 )
collision_layer = 4
collision_mask = 10
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Beams/Beam"]
position = Vector2( 32.1427, -0.00658035 )
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beams/Beam"]
position = Vector2( 32.0724, 0.23597 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Beams/Beam"]
position = Vector2( 16.0867, -54.4472 )
rect = Rect2( 0, 0, 34, 109 )

[node name="BeamGeneratorTimer" type="Timer" parent="."]
wait_time = 0.03
autostart = true
[connection signal="screen_entered" from="Beams/Beam/VisibilityNotifier2D" to="Beams/Beam" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Beams/Beam/VisibilityNotifier2D" to="Beams/Beam" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="BeamGeneratorTimer" to="." method="_on_BeamGeneratorTimer_timeout"]
